@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: grdimage_func.c,v 1.13 2011-04-12 16:22:30 remko Exp $
+ *	$Id: grdimage_func.c,v 1.14 2011-04-14 15:29:35 remko Exp $
  *
  *	Copyright (c) 1991-2011 by P. Wessel, W. H. F. Smith, R. Scharroo, and J. Luis
  *	See LICENSE.TXT file for copying and redistribution conditions.
@@ -412,7 +412,6 @@ GMT_LONG GMT_grdimage (struct GMTAPI_CTRL *API, struct GMT_OPTION *options)
 		/* Allocate new control structures */
 		to_gdalread = GMT_memory (GMT, NULL, 1, struct GDALREAD_CTRL);
 		from_gdalread = GMT_memory (GMT, NULL, 1, struct GD_CTRL);
-		to_gdalread->F.active = TRUE;
 
 		if (GMT->common.R.active && !Ctrl->D.mode) {
 			char strR [128]; 
